--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "client": "npm start --prefix frontend",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "data:import": "node backend/seeder",
-    "data:destroy": "node backend/seeder -d"
+    "data:destroy": "node backend/seeder -d",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "Roozbeh Afshari",
   "license": "ISC",
@@ -25,12 +26,10 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4",
-    "monopay": "^1.2.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "path": "^0.12.7",
-    "trez-sms-client": "^1.0.4",
-    "zarinpal-checkout": "^0.2.7"
+    "trez-sms-client": "^1.0.4"
   },
   "devDependencies": {
     "concurrently": "^7.2.2",
