--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,20 +1,20 @@
 FROM node:16 as build
 
-WORKDIR /cloud1-client
+WORKDIR /eshop-client
 
-COPY package.json /cloud1-client/package.json
+COPY package.json /eshop-client/package.json
 
 RUN npm install
 
 RUN npm install react-scripts -g
 
-COPY . /cloud1-client
+COPY . /eshop-client
 
 RUN npm run build
 
 FROM nginx:1.16.0
 
-COPY --from=build /cloud1-client/build/ usr/share/nginx/html 
+COPY --from=build /eshop-client/build/ usr/share/nginx/html 
 
 RUN rm /etc/nginx/conf.d/default.conf
 
