--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ node_modules/
 .pnp.js
 proshop_mern-master
 proshop_mern-master/
+yaml
+yaml/
+
 # testing
 /coverage
 
@@ -22,12 +25,8 @@ commands
 .env.development.local
 .env.test.local
 .env.production.local
-
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .vscode/settings.json
-test.yaml
-config.yaml
-docker-compose.yaml
-MERN.yaml
+
