--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -6,7 +6,7 @@ location /socket/ {
   proxy_set_header Connection "upgrade";
   proxy_set_header Host $host;
   prog_cache_bypass  $http_upgrade;
-  proxy_pass http://cloud1-service:5000;
+  proxy_pass http://eshop-service:5000;
 }
 
 location/api/users  {
@@ -15,7 +15,7 @@ location/api/users  {
   proxy_set_header Connection host "upgrade";
   proxy_set_header Host $host;
   proxy_cache_bypass $http_upgrade;
-  proxy_pass http://cloudl-server-service:5000/api/users;
+  proxy_pass http://eshop-server-service:5000/api/users;
 } 
 location / {
   root: /usr/share/nginx/html;
