--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -1,30 +1,32 @@
+
 server {
+    listen 80;
 
-location /socket/ {
-  proxy_http_version 1.1;
-  proxy_set_header Upgrade $http_upgrade;
-  proxy_set_header Connection "upgrade";
-  proxy_set_header Host $host;
-  prog_cache_bypass  $http_upgrade;
-  proxy_pass http://eshop-service:5000;
-}
+    location /socket/ {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        prog_cache_bypass  $http_upgrade;
+        proxy_pass http://eshop-server-service:5000;
+    }
 
-location/api/users  {
-  proxy_http_version 1.1;
-  proxy_set_header Upgrade $http_upgrade;
-  proxy_set_header Connection host "upgrade";
-  proxy_set_header Host $host;
-  proxy_cache_bypass $http_upgrade;
-  proxy_pass http://eshop-server-service:5000/api/users;
-} 
-location / {
-  root: /usr/share/nginx/html;
-  index index.html index.htm;
-  try_files $uri $uri/ /index.html; 
-}
-erro_page 500 502 503 504 /50x.html;
+    location /api/users  {
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection host "upgrade";
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_pass http://eshop-server-service:5000;
+    } 
+    location / {
+        root: /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html; 
+    }
+    erro_page 500 502 503 504 /50x.html;
 
-location = 58x.html {
-    root /usr/share/nginx/html;
-}
+    location = 58x.html {
+        root /usr/share/nginx/html;
+    }
 }
