--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16 as build
+FROM node:16 as build 
 
 WORKDIR /eshop-client
 
@@ -14,12 +14,12 @@ RUN npm run build
 
 FROM nginx:1.16.0
 
-COPY --from=build /eshop-client/build/ docker 
+COPY --from=build /eshop-client/build /usr/share/nginx/html
 
 RUN rm /etc/nginx/conf.d/default.conf
 
 COPY nginx/nginx.conf /etc/nginx/conf.d 
 
-EXPOSE 80
+EXPOSE 80 
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["nginx","-g","daemon off;"]
