--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -1,32 +1,33 @@
-
-server {
+  server {
     listen 80;
 
     location /socket/ {
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_set_header Host $host;
-        prog_cache_bypass  $http_upgrade;
-        proxy_pass http://eshop-server-service:5000;
+       proxy_http_version 1.1;
+       proxy_set_header Upgrade $http_upgrade;
+       proxy_set_header Connection "upgarde";
+       proxy_set_header Host $host;
+       proxy_cache_bypass $http_upgrade;
+       proxy_pass  http://eshop-server:5000;
     }
 
-    location /api/users  {
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection host "upgrade";
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-        proxy_pass http://eshop-server-service:5000;
-    } 
+
+    location /api {
+       proxy_http_version 1.1;
+       proxy_set_header Upgrade $http_upgrade;
+       proxy_set_header Connection "upgarde";
+       proxy_set_header Host $host;
+       proxy_cache_bypass $http_upgrade;
+       proxy_pass  http://eshop-server:5000/api;
+    }
+
     location / {
-        root: /usr/share/nginx/html;
+        root /usr/share/nginx/html;
         index index.html index.htm;
-        try_files $uri $uri/ /index.html; 
+        try_files  $uri $uri/ /index.html; 
     }
-    erro_page 500 502 503 504 /50x.html;
+       error_page 500 502 503 504 /50x.html;
 
-    location = 58x.html {
+    location = 50x.html {
         root /usr/share/nginx/html;
     }
-}
+  }
