--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -30,4 +30,9 @@
     location = 50x.html {
         root /usr/share/nginx/html;
     }
+
+    location /uploads {
+    
+    proxy_pass http://eshop-server:5000/uploads;
+   }
   }
