solve picture upload and view problem

--- a/client/nginx/nginx.conf
+++ b/client/nginx/nginx.conf
@@ -31,8 +31,13 @@
         root /usr/share/nginx/html;
     }
 
+    location /api/upload {
+    
+    proxy_pass http://eshop-server:5000/api/upload;
+   }
     location /uploads {
     
     proxy_pass http://eshop-server:5000/uploads;
-   }
-  }
+    }
+ }
+  
