--- a/client/package.json
+++ b/client/package.json
@@ -20,7 +20,6 @@
     "react-router-bootstrap": "^0.26.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
-    "react-to-print": "^2.14.7",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
@@ -49,6 +48,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
-
+  },
+  "proxy": "http://127.0.0.1:5000"
 }
