--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-filterable-table": "^0.3.442",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.2",
     "react-router-bootstrap": "^0.26.1",
