--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,10 @@
     "npm": "^8.18.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
+    "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-table2-filter": "^1.3.3",
+    "react-bootstrap-table2-paginator": "^2.1.2",
+    "react-bootstrap-table2-toolkit": "^2.1.3",
     "react-dom": "^18.2.0",
     "react-filterable-table": "^0.3.442",
     "react-helmet": "^6.1.0",
